crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_`__iter__`_set_to_`None`.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - `__iter__` set to `None`
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import ClassVar
 2 | 
 3 | class Foo:
 4 |     __iter__: ClassVar[None] = None
 5 | 
 6 | # error: [not-iterable]
 7 | for x in Foo():
 8 |     pass
 9 | 
10 | class Bar:
11 |     __iter__ = None
12 | 
13 | # error: [not-iterable]
14 | for y in Bar():
15 |     pass
```

# Diagnostics

```
error: lint:not-iterable
 --> /src/mdtest_snippet.py:7:10
  |
6 | # error: [not-iterable]
7 | for x in Foo():
  |          ^^^^^ Object of type `Foo` is not iterable because its `__iter__` attribute has type `None`, which is not callable
8 |     pass
  |

```

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:14:10
   |
13 | # error: [not-iterable]
14 | for y in Bar():
   |          ^^^^^ Object of type `Bar` may not iterable because its `__iter__` method has type `Unknown | None`, and some members of the union do not conform to the iteration protocol
15 |     pass
   |

```
